# finances

./: .gitignore  README.md  aggerate_finances.py  display_finances.py  pyproject.toml  test.ipynb
rente/: compute_etf.py
