[tool.poetry]
name = "finances"
version = "0.0.0"
description = "track my finances"
authors = [
  "Maksym Sevkovych <m.sevkovych@web.de>",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.2"
pip = "^24.2"
pyyaml = "^6.0.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"